added test files and gcta for testing

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -14,15 +14,15 @@ general:
 # Pipeline specific options:
 
 #dir of UKBB files
-files: /Users/flixofarrell/Desktop/test_files/small
+files: test_files
 
 
 #dir of GCTA64 command 
 gcta_dir: ./gcta/gcta64
 
-pheno: /Users/flixofarrell/Desktop/test_files/small/phe_n.phen
+pheno: test_files/phe_n.phen
 
 part: 3
 
-out_dir: /Users/flixofarrell/Desktop/outdir
+out_dir: test_files/outdir
 
