--- a/pipeline.yml
+++ b/pipeline.yml
@@ -18,7 +18,7 @@ files: test_files
 
 
 #dir of GCTA64 command 
-gcta_dir: ./gcta/gcta64
+gcta_dir: ./gcta_l/gcta64
 
 pheno: test_files/phe_n.phen
 
