--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 
 install:
   - pip install cgatcore
+  - pip install pyyaml
 # command to run tests
 script:
   - python BBslap.py make full --local 
