--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ install:
   - pip install cgatcore
   - pip install pyyaml
   - pip install ruffus
+  - pip install gevent
 # command to run tests
 script:
   - python BBslap.py make full --local 
