--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - pip install setuptools
   - pip install six
   - pip install sqlalchemy
+  - pip install apsw
 
 # command to run tests
 script:
