--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,17 @@ install:
   - pip install six
   - pip install sqlalchemy
   - pip install apsw
+  - pip install pandas
+  - pip install numpy
+# Misc dependencies
+  - pip install coreutils
+  - pip install nomkl
+  - pip install time
+  - pip install boto3
+  - pip install google-cloud-storage
+  - pip install google-cloud-sdk
+  - pip install ftputil
+  - pip install pysftp
 
 # command to run tests
 script:
