--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - pip install pandas
   - pip install numpy
 # Misc dependencies
-  - pip install coreutils
+  - pip install pycoreutils
   - pip install nomkl
   - pip install time
   - pip install boto3
