--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
 language: python
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
 install:
   - pip install cgatcore
   - pip install pyyaml
@@ -18,6 +16,7 @@ install:
   - pip install apsw
   - pip install pandas
   - pip install numpy
+  - pip install coverage
 # Misc dependencies
   - pip install pycoreutils
   - pip install times
@@ -29,4 +28,7 @@ install:
 
 # command to run tests
 script:
-  - python GQSLAP.py make full --local 
+  - coverage run -m GQSLAP.py make full --local 
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
