needs to be linux gcta package

--- a/pipeline.yml
+++ b/pipeline.yml
@@ -33,7 +33,7 @@ prefix: foobar
 #dir of GCTA64 command - you won't need to change this unless
 #you have gcta configured on your system and would rather use 
 #your specific version
-gcta_dir: ./gcta/gcta64
+gcta_dir: ./gcta/gcta64_l
 
 #Path for your phenotype file
 pheno: test_files/phe_n.phen
