--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,26 @@
 language: python
+python:
+  - "3.4"
+  - "3.5"
+  - "3.6"
+
 install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
-
   - bash miniconda.sh -b -p $HOME/miniconda
-  - source "$HOME/miniconda/etc/profile.d/conda.sh"
+  - export PATH="$HOME/miniconda/bin:$PATH"
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q conda
   - conda info -a
   - conda env create -f gqslap_conda.yml
-  - conda activate gqslap
+  - source activate gqslap
 
+# command to run tests
+script:
+  - coverage run GQSLAP.py make full --local 
+
+after_success:
+   bash <(curl -s https://codecov.io/bash) 
 
 # command to run tests
 script:
